# controllers/modifyPassword.go
@@ -10,6 +10,17 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+//ModifyUserPassword godoc
+// @Summary Modify user password
+// @Description get the user and password update
+// @User get-struct-by-json
+// @Accept  json
+// @Produce json
+// @Success 200 {string} Token "Password updated"
+// @Header 200 {string} Token "jwtKey"
+// @Failure 400,404 {object} gin.H "something went wrong with the given data or couldn't update password"
+// @Failure default {object} gin.H "Invalid Password Update"
+// @Router /modifyPassword [put]
 func ModifyUserPassword(c *gin.Context) {
 	var user models.User
 
